- Fixed: On Windows, a wrong locale for LC_NUMERIC would be applied, resulting in malfunction of pdf() and postscript()
- Fixed: Did not use system configured background color in data editor
- Fixed: New columns would be always be added to the right, instead of to the left, in the data editor
- Fixed: Would crash when trying to edit 0 row data.frame
- Fixed: Output generated by external processes (system()) was not shown on the console
- Fixed: Converting a variable to factor in the editor would drop existing levels, silently, and lead to NAs
- Fixed: Cursor would keep jumping to the end, when typing a filename in the filename selection field in plugins
- Fixed: Submit button would not become enabled in "Basic Statistics" plugin
- Moved automated testing framework moved to a dedicated R package "rkwardtests", and added documentation
- Support pasting to the middle of the current command line in the R Console
- Better handling of script-editor commands while the R Console is busy
- Correct interleaving of multi-line commands and the corresponding output in the R Console
- Fixed: Portions of multi-line commands entered on the R Console would be run twice under some circumstances
- Fixed: Lockups or crashes when using packages RGtk2 or rJava on the X11 platform
- Fixed: R task callback handlers were not called
- GUI frontend and R backend now run in separate processes
- Re-write of large portions of the R embedding code
- Fixed: Did not respect system settings for tooltip background color in some styles
- Fixed: Installation would continue, seemingly successfully, even if R support libraries could not be installed
- Fixed: Function argument hints would sometimes persist after closing a script window
- Fixed: Would fail to analyse structure of ReferenceClass-objects
- Fixed: "Vector" mode in "Paste special" action did not work correctly
- Attempt to save workspace on crashes		TODO: detect recovery-file at startup, and offer to load it.