@@ -2,7 +2,7 @@
                           startupdialog  -  description
                              -------------------
     begin                : Thu Aug 26 2004
-    copyright            : (C) 2004 by Thomas Friedrichsmeier
+    copyright            : (C) 2004, 2011 by Thomas Friedrichsmeier
     email                : tfry@users.sourceforge.net
  ***************************************************************************/
 
@@ -38,11 +38,12 @@ Q_OBJECT
 public:
 	/** enum to hold result of StartupDialog. WARNING: do not change the numeric values! They are saved as user settings in the config (@see RKSettingsModuleGeneral). */
 	enum Result {
-		EmptyWorkspace=0,	/**< start with an empty workspace */
+		EmptyWorkspace=0,			/**< start with an empty workspace */
 		EmptyTable=1,				/**< start with an empty table */
 		ChoseFile=2,				/**< chose file to open */
-		NoSavedSetting=3,		/**< not acutally returned as a result. Used in RKSettingsModuleGeneral. This is saved, if user wants to be asked on every startup */
-		OpenFile=4					/**< open a recent file (already specified) */
+		NoSavedSetting=3,			/**< not acutally returned as a result. Used in RKSettingsModuleGeneral. This is saved, if user wants to be asked on every startup */
+		OpenFile=4,					/**< open a recent file (already specified) */
+		RestoreFromWD=5				/**< load workspace from current directory, if available (R option --restore). */
 	};
 	struct StartupDialogResult {
 		Result result;
@@ -53,7 +54,8 @@ public:
 
 	~StartupDialog();
 	
-	static StartupDialogResult *getStartupAction (QWidget *parent, KRecentFilesAction *recent_files);
+	static StartupDialogResult getStartupAction (QWidget *parent, KRecentFilesAction *recent_files);
+	static KUrl getRestoreFile ();
 public slots:
 	void accept ();
 	void reject ();
@@ -66,6 +68,7 @@ protected:
 private:
 	QRadioButton *empty_workspace_button;
 	QRadioButton *empty_table_button;
+	QRadioButton *restore_workspace_button;
 	QRadioButton *open_button;
 	QCheckBox *remember_box;
 	
