@@ -1,3 +1,4 @@
+- Do not load .RData file from current directory by default (configurable)
 - Fixed: On Windows, a wrong locale for LC_NUMERIC would be applied, resulting in malfunction of pdf() and postscript()
 - Fixed: Did not use system configured background color in data editor
 - Fixed: New columns would be always be added to the right, instead of to the left, in the data editor
